--- a/app/src/main/res/layout/activity_form_register.xml
+++ b/app/src/main/res/layout/activity_form_register.xml
@@ -102,7 +102,7 @@
           <EditText
               android:id="@+id/editTextTextPersonName2"
               android:layout_width="match_parent"
-              android:layout_height="46dp"
+              android:layout_height="40dp"
               android:background="@drawable/texto_form"
               android:ems="10"
               android:hint="Nombre"
@@ -115,12 +115,12 @@
           <TextView
               android:id="@+id/textView11"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content" />
+              android:layout_height="14dp" />
 
           <EditText
               android:id="@+id/editTextTextPersonName7"
               android:layout_width="match_parent"
-              android:layout_height="46dp"
+              android:layout_height="40dp"
               android:background="@drawable/texto_form"
               android:ems="10"
               android:hint="Apellido"
@@ -133,12 +133,12 @@
           <TextView
               android:id="@+id/textView13"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content" />
+              android:layout_height="14dp" />
 
           <EditText
               android:id="@+id/editTextTextPersonName9"
               android:layout_width="match_parent"
-              android:layout_height="46dp"
+              android:layout_height="40dp"
               android:background="@drawable/texto_form"
               android:ems="10"
               android:hint="Correo Electrónico"
@@ -151,12 +151,12 @@
           <TextView
               android:id="@+id/textView12"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content" />
+              android:layout_height="14dp" />
 
           <EditText
               android:id="@+id/editTextTextPersonName8"
               android:layout_width="match_parent"
-              android:layout_height="46dp"
+              android:layout_height="40dp"
               android:background="@drawable/texto_form"
               android:ems="10"
               android:hint="Teléfono"
@@ -169,12 +169,12 @@
           <TextView
               android:id="@+id/textView14"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content" />
+              android:layout_height="14dp" />
 
           <EditText
               android:id="@+id/editTextTextPersonName10"
               android:layout_width="match_parent"
-              android:layout_height="46dp"
+              android:layout_height="40dp"
               android:background="@drawable/texto_form"
               android:ems="10"
               android:hint="Dirección"
@@ -187,15 +187,33 @@
           <TextView
               android:id="@+id/textView15"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content" />
+              android:layout_height="14dp" />
 
           <EditText
               android:id="@+id/editTextTextPersonName"
               android:layout_width="match_parent"
-              android:layout_height="46dp"
+              android:layout_height="40dp"
               android:background="@drawable/texto_form"
               android:ems="10"
               android:hint="Constraseña"
+              android:inputType="textPassword"
+              android:paddingLeft="20sp"
+              android:textColor="#6E7692"
+              android:textColorHint="#6E7692"
+              android:textSize="22sp" />
+
+          <TextView
+              android:id="@+id/textView16"
+              android:layout_width="match_parent"
+              android:layout_height="14dp" />
+
+          <EditText
+              android:id="@+id/editTextTextPersonName3"
+              android:layout_width="match_parent"
+              android:layout_height="40dp"
+              android:background="@drawable/texto_form"
+              android:ems="10"
+              android:hint="Confirmar Contraseña"
               android:inputType="textPassword"
               android:paddingLeft="20sp"
               android:textColor="#6E7692"
