--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -114,7 +114,7 @@
                         android:layout_height="10dp" />
 
                     <EditText
-                        android:id="@+id/editTextTextEmailAddress"
+                        android:id="@+id/textEmailLogin"
                         android:layout_width="match_parent"
                         android:layout_height="46dp"
                         android:background="@drawable/texto_form"
@@ -143,7 +143,7 @@
                         android:layout_height="10dp" />
 
                     <EditText
-                        android:id="@+id/editTextTextPassword"
+                        android:id="@+id/textPasswordLogin"
                         android:layout_width="match_parent"
                         android:layout_height="46dp"
                         android:background="@drawable/texto_form"
@@ -168,6 +168,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:backgroundTint="#009C27B0"
+                            android:onClick="iniciarSesion"
                             android:paddingStart="0sp"
                             android:paddingLeft="0sp"
                             android:paddingTop="0sp"
